Update explain to XMLHttpRequest

--- a/3. JSON exercise Task List/Exercise 4 - deleting task item.html
+++ b/3. JSON exercise Task List/Exercise 4 - deleting task item.html
@@ -45,6 +45,7 @@
 						buildCheckboxes(dataJSON);
 					}
 				};
+				//lst: request type; 2nd: URL; 3rd: true (asynchronous) or false (synchronous) 
 				xhr.open("GET","https://api.myjson.com/bins/1fa4wk", true);
 				xhr.send();
             }
